// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage ProductCard must be render  1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
</div>
`;

exports[`ProductImage the counter should be incremented 1`] = `
<div
  className="productCard undefined"
>
  <h1>
    ProductCard
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
    +
  </button>
</div>
`;
